VIZ-708 - Export to PDF cropping issue

--- a/com.ibi.kpi.table/css/table.css
+++ b/com.ibi.kpi.table/css/table.css
@@ -5,7 +5,7 @@
 	text-align: center;
 	min-width: 200px;
 	max-width: 500px;
-	padding: 10px;
+	padding: 0;
 	overflow: hidden;
 }
 .kpi-table-nav {
@@ -32,7 +32,6 @@
 	text-decoration: none;
 }
 .kpi-table-slide {
-	position: absolute;
     width: 100%;
 	max-width: 500px;
 	top: 0;
